# qcalc

./: Cargo.toml  LICENCE.txt  README.md  input.txt  output.txt
src/: app.rs  event.rs  interpreter.rs  lib.rs  main.rs  parse.rs  token.rs  tui.rs  ui.rs
