[package]
name = "qcalc"
version = "0.1.0"
edition = "2021"
authors = ["ochir <ochir_erkhembayar@yahoo.com>"]
description = """
qcalc is a simple but effective terminal calculator for quick access and ease of use. It supports
history of expressions, built-in functions and stored variables
"""
license = "MIT"
homepage = "https://github.com/OchirErkhembayar/tc#readme"
repository = "https://github.com/OchirErkhembayar/tc"
readme = "README.md"
categories = ["calculator", "math", "calculations"]
keywords = ["tui", "calculator", "math"]
include = [
    "/src",
    "/README.md",
    "LICENCE.txt",
]

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.25.0"
tui-textarea = "0.4.0"
