[package]
name = "qcalc"
version = "0.15.3"
edition = "2021"
authors = ["ochir <ochir_erkhembayar@yahoo.com>"]
description = """
qcalc is a simple but effective terminal calculator for quick access and ease of use. It supports
history of expressions, built-in functions and stored variables
"""
license = "MIT"
homepage = "https://github.com/OchirErkhembayar/tc#readme"
repository = "https://github.com/OchirErkhembayar/tc"
readme = "README.md"
categories = ["finance", "mathematics"]
keywords = ["tui", "calculator", "math"]
include = [
    "/src",
    "/README.md",
    "LICENCE.txt",
]

[dependencies]
arboard = "3.4.1"
crossterm = ">=0.27.0"
dirs-next = ">=2.0.0"
ratatui = ">=0.25.0"
tui-textarea = ">=0.4.0"
